test/files/neg/typed-xml-scala-processing-instruction-4.scala
class Test {
  <element><?scala { scala.xml.ScalaXMLUnmarshaller } ?></element>
}
