test/files/neg/typed-xml-scala-processing-instruction-4.check
typed-xml-scala-processing-instruction-4.scala:2: error: in XML literal: scala processing instructions can only appear at start of XML literal
  <element><?scala { scala.xml.ScalaXMLUnmarshaller } ?></element>
                   ^
one error found
